add more devices

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           Suspendisse potenti.  Aenean in sem ac leo mollis blandit.
         </p>
 
-        <tv-program debug="true" frame="frame1"></tv-program>
+        <tv-program debug="true" device="black crt tv"></tv-program>
 
         <p>
           Vestibulum convallis, lorem a tempus semper, dui dui euismod
